Fix positioning of quote icon in card testimonial for improved visibility

--- a/CSS_advanced/styles/31-style.css
+++ b/CSS_advanced/styles/31-style.css
@@ -468,8 +468,8 @@ ul.row {
 .card-testimonial .card-quote::before {
     content: \201C;
     position: absolute;
-    top: -4.5rem;
-    left: -1rem;
+    top: -1rem;
+    left: -4.5rem;
     color: #efeded;
     font-size: 10rem;
     z-index: -1;
